--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ ul.mb-0 li {
 button.client_btn {
     background: radial-gradient(#007bff, #007bff);
 }
-/* <!-- =========== Client Start ===========  --> */
+/* <!-- =========== Client end ===========  --> */
 
 /* =========== Blog area start =========== */
 .card.card_body {
