--- a/style.css
+++ b/style.css
@@ -179,6 +179,10 @@ button.client_btn {
 .card.card_body {
     margin-left: 1%;
 }
+/* .item{
+    border: 7px solid #0b5ed7;
+    border-radius: 5px;
+} */
 
 /* =========== Blog area end =========== */
 
